# OBS-self-heal-agent

./: .gitignore  README.md  REMOTE_API_GUIDE.md  obs_reset_capture_devices.sh  obs_start_stream.sh  obs_stop_stream.sh  pyproject.toml
configs/: config.example.yaml
docs/: ARCHITECTURE.md  FAILURE_MODE_MATRIX.md  RECOVERY_POLICY.md
skills/: README.md
skills/obs-self-heal/: SKILL.md
skills/obs-self-heal/scripts/: cron-on-probe-fail.sh  obs-self-heal-probe.sh  obs-self-heal-run.sh
src/obs_self_heal/: __init__.py  api.py  cli.py  config.py  cooldowns.py  logging_setup.py  models.py  orchestrator.py  policy.py
src/obs_self_heal/wrappers/: __init__.py  obs.py  obs_control_api.py  obs_ws_client.py  reachability.py  scripts.py  thruk.py  thruk_scoped.py  unraid.py
tests/: test_cli.py  test_e2e_simulation.py  test_obs_auth.py  test_policy.py  test_thruk_parse.py  test_thruk_scoped.py  test_thruk_subprocess.py
tests/fixtures/: minimal_config.yaml  sim_snapshot.json
